FE-598 Fix secandary text block on mobile

--- a/frontend/src/pages/flip.css
+++ b/frontend/src/pages/flip.css
@@ -221,6 +221,7 @@
         display: flex;
         flex-direction: column;
         padding-bottom: 80px;
+        opacity: 1;
 
         .flip__screen-header_secondary {
             margin-bottom: 20px;
